; ModuleID = '/home/carl/AnghaBench/kphp-kdb/TL/extr_tl-scheme.c_tl_scheme_object_is_colon_terminated_function.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/TL/extr_tl-scheme.c_tl_scheme_object_is_colon_terminated_function.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tl_scheme_object = type { i64, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i8* }

@tlso_function = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tl_scheme_object_is_colon_terminated_function(%struct.tl_scheme_object* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.tl_scheme_object*, align 8
  %4 = alloca i32, align 4
  store %struct.tl_scheme_object* %0, %struct.tl_scheme_object** %3, align 8
  %5 = load %struct.tl_scheme_object*, %struct.tl_scheme_object** %3, align 8
  %6 = getelementptr inbounds %struct.tl_scheme_object, %struct.tl_scheme_object* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = load i64, i64* @tlso_function, align 8
  %9 = icmp ne i64 %7, %8
  br i1 %9, label %10, label %11

10:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %35

11:                                               ; preds = %1
  %12 = load %struct.tl_scheme_object*, %struct.tl_scheme_object** %3, align 8
  %13 = getelementptr inbounds %struct.tl_scheme_object, %struct.tl_scheme_object* %12, i32 0, i32 1
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i8*, i8** %14, align 8
  %16 = call i32 @strlen(i8* %15)
  store i32 %16, i32* %4, align 4
  %17 = load i32, i32* %4, align 4
  %18 = icmp sgt i32 %17, 0
  br i1 %18, label %19, label %31

19:                                               ; preds = %11
  %20 = load %struct.tl_scheme_object*, %struct.tl_scheme_object** %3, align 8
  %21 = getelementptr inbounds %struct.tl_scheme_object, %struct.tl_scheme_object* %20, i32 0, i32 1
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 0
  %23 = load i8*, i8** %22, align 8
  %24 = load i32, i32* %4, align 4
  %25 = sub nsw i32 %24, 1
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds i8, i8* %23, i64 %26
  %28 = load i8, i8* %27, align 1
  %29 = sext i8 %28 to i32
  %30 = icmp eq i32 %29, 58
  br label %31

31:                                               ; preds = %19, %11
  %32 = phi i1 [ false, %11 ], [ %30, %19 ]
  %33 = zext i1 %32 to i64
  %34 = select i1 %32, i32 1, i32 0
  store i32 %34, i32* %2, align 4
  br label %35

35:                                               ; preds = %31, %10
  %36 = load i32, i32* %2, align 4
  ret i32 %36
}

declare dso_local i32 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
